--- a/webgl_c/web/styles.css
+++ b/webgl_c/web/styles.css
@@ -1,4 +1,7 @@
-@import url(https://fonts.googleapis.com/css?family=Roboto);
+@font-face {
+    font-family: 'Aclonica';
+    src: url('./assets/Aclonica.ttf');
+}
 
 html, body {
     width: 100%;
@@ -6,4 +9,10 @@ html, body {
     margin: 0;
     padding: 0;
     font-family: 'Roboto', sans-serif;
+}
+
+
+
+h1 {
+    font-family: 'Aclonica';
 }
